kubernetes/apps/observability/kubernetes-dashboard/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
spec:
  hostnames: ["kubernetes.devilfruitlabs.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kubernetes-dashboard
          namespace: flux-system
          port: 8443
      matches:
        - path:
            type: PathPrefix
            value: /
